Fix comments. Reformat code